<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MuzHit</string>
    <string name="the_game">MuzHit Le Jeu!</string>

    <string name="start_new_game">Nouvelle Partie</string>
    <string name="exit_game">EXIT</string>

    <string name="game_score">Score:</string>
    <string name="annee">Année</string>
    <string name="question">Question</string>
    <string name="answer1">-1-</string>
    <string name="answer2">-2-</string>
    <string name="answer3">-3-</string>
    <string name="correct_answer">Réponse Correcte</string>
    <string name="bad_answer">Mauvaise Réponse</string>
    <string name="game_result">Résultat de la partie:</string>
    <string name="high_score">Bravo vous avez battu votre meilleur score</string>

    <string name="no_network">Veuillez activer le réseau et relancer l\'application</string>
    <string name="no_file">Erreur de chargement des questions</string>
    <string name="downloading">Téléchargement des questions</string>
    <string name="loading_bdd">Initialisation des questions</string>

    <string name="dwl_add">http://oxilea.fr/misc/dwl/muzhit/test2.csv</string>
    <string name="dwl_file_name">test.csv</string>

    <string name="title_activity_game_main">GameMain</string>
    <string name="title_activity_game_result">GameResult</string>

    <string name="action_settings">Setting</string>

</resources>
