<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MuzHit">

    <TextView android:text="@string/the_game" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffd25b"
        android:textStyle="bold"
        android:singleLine="true"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/start_new_game"
        android:id="@+id/start_game_button"
        android:background= "@drawable/portee_light"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:onClick="startNewGame" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/exit_game"
        android:id="@+id/exit_game_button"
        android:visibility="invisible"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="exitGame" />
</RelativeLayout>
